--- a/homework_manager/package.json
+++ b/homework_manager/package.json
@@ -1,11 +1,9 @@
 {
   "name": "homework_manager",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "homework manager using MEAN stack",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "rohan",
   "license": "ISC",
   "dependencies": {
